#11 Implement create movie in backend
Add entity -> dto mapping via AutoMapper
